--- a/index.html
+++ b/index.html
@@ -4834,6 +4834,30 @@ function triggerT80Cannon() {
 	let resultData = null;
 	let battleEnded = false;
 	const battleDuration = 180; // 戰鬥時長 180 秒（3 分鐘）
+	
+	const attackPhrases = {
+	  normal: [
+		"自信地打出一個長點射",
+		"使用單發點射，進行精確射擊",
+		"克制地打出兩個短點射",
+		"把槍舉過頭頂，亂射一通",
+		"調到全自動，進行壓制射擊"
+	  ],
+	  btr: [
+		"使用30mm高爆彈鏈[HE]，前出實施火力支援",
+		"使用30mm混合彈鏈[AP+HE+API]，對目標展開火力覆蓋",
+		"使用30mm對空彈鏈[API+HE]，對目標展開精準射擊",
+		"使用30mm穿甲彈鏈[AP]，對敵方掩體展開集中射擊"
+	  ],
+	  t80: [
+	    "使用12.7mm高射機槍[7n34]，對目標展開精確點射",
+		"使用125mm高爆彈[3OF26]，對開闊地目標展開射擊",
+		"使用125mm高爆彈[3OF26]，對掩體內目標展開射擊",
+		"使用125mm穿甲彈[3BM42]，對混凝土建築展開射擊",
+		"使用125mm破甲彈[BK-12]，對混凝土建築展開射擊"
+	  ]
+	};
+
 
 	// 修改後：進入對戰模式只初始化獨立對戰動畫
 	function enterBattleMode() {
@@ -5275,13 +5299,29 @@ function triggerT80Cannon() {
 	  
 	  // 模拟我方攻击
 	  const ourHit = (Math.random() * 100 < hitChance);
-	  const ourDamage = ourHit ? (Math.floor(Math.random() * 10) + 1) : 0;
-	  
+	  const baseOurDamage = ourHit ? (Math.floor(Math.random() * 10) + 1): 0;
+	   // 從 gameState 中查找僵尸指揮中心的等級
+	  let commandCenterLevel = 0;
+	  if (window.gameState && window.gameState.buildings) {
+		  const commandCenter = window.gameState.buildings.find(b => 
+			  b && b.type.toLowerCase() === "zombiecommandcenter"
+		  );
+		  if (commandCenter) {
+			  commandCenterLevel = commandCenter.level;
+		  }
+	  }
+
+	  // 每級1%的加成：倍率 = 1 + (僵尸指揮中心等級 × 0.01)
+	  const multiplierZ = 1 + commandCenterLevel * 0.01;
+
+	  // 最終傷害
+	  const ourDamage = Math.round(baseOurDamage * multiplierZ);
 	  if (ourHit) {
+	    let phrase = getRandomPhrase("normal");
+		pushBattleLog("僵尸" + phrase + "（命中），對方僵尸-" + ourDamage);
 		totalEnemyDamage += ourDamage;
-		pushBattleLog(`僵尸打出了長點射(命中)，對方僵尸-${ourDamage}`); // 确保格式一致
 	  } else {
-		pushBattleLog("僵尸打出了長點射（未命中）");
+		pushBattleLog("僵尸" + phrase + "（未命中）");
 	  }
 	}
 
@@ -5731,7 +5771,15 @@ function triggerT80Cannon() {
 	  updateResourceCounters();
 	}
 	
-	
+	function getRandomPhrase(type) {
+	  let phrases = attackPhrases[type];
+	  if (!phrases || phrases.length === 0) {
+		// 沒有特定類型，返回一般攻擊的描述
+		phrases = attackPhrases.normal;
+	  }
+	  const index = Math.floor(Math.random() * phrases.length);
+	  return phrases[index];
+	}
 	function triggerBattleEvent() {
 	  if (!battleMatched) return;
 	  
@@ -5758,20 +5806,13 @@ function triggerT80Cannon() {
 	  // 最終傷害
 	  const ourDamage = Math.round(baseOurDamage * multiplierZ);
 	  if (ourHit) {
-		pushBattleLog(" 僵尸 打出了長點射(命中)，對方僵尸-" + ourDamage);
+	    let phrase = getRandomPhrase("normal");
+		pushBattleLog("僵尸" + phrase + "（命中），對方僵尸-" + ourDamage);
 		totalEnemyDamage += ourDamage;
 	  } else {
-		pushBattleLog(" 僵尸 打出了長點射（未命中）");
+		pushBattleLog("僵尸" + phrase + "（未命中）");
 	  }
 
-	  const enemyHit = (Math.random() * 100 < hitChance);
-	  const enemyDamage = enemyHit ? (Math.floor(Math.random() * 10) + 1) : 0;
-	  if (enemyHit) {
-		pushBattleLog(" 僵尸 打出了長點射(命中)，對方僵尸-" + enemyDamage);
-		totalSelfDamage += enemyDamage;
-	  } else {
-		pushBattleLog(" 僵尸 打出了長點射（未命中）");
-	  }
 	}
 	// 获取当前玩家的僵尸搜索精灵图URL
 	function getZombieSearchSpriteUrl() {
@@ -6196,19 +6237,26 @@ function triggerT80Cannon() {
 	  const hitSuccess = hitRoll < hitChanceVal;
 	  
 	  if (hitSuccess) {
-		totalEnemyDamage += damage;
+	    totalEnemyDamage += damage;
 		
-		// 上传攻击日志
-		const attackMessage = `${battleBTRType === 't80' ? 'T-80' : 'BTR-80A'}實施火力支援（命中），對方僵尸-${damage}`;
-		pushBattleLog(attackMessage);
-		
-		// 如果是T-80，触发开炮动画
-		if (battleBTRType === "t80") {
-		  triggerBattleT80Cannon();
-		}
+	    let type = battleBTRType === "t80" ? "T-80" : "BTR-80A";
+	     // 從對應詞庫中獲取一個隨機短語
+	    let phrase = getRandomPhrase(type);
+	  
+		  // 上傳攻擊日志，使用隨機短語來描述事件
+		  const attackMessage = `${phrase}（命中），對方僵尸-${damage}`;
+		  pushBattleLog(attackMessage);
+
+		  // 如果是 T-80 事件，觸發開炮動畫
+		  if (battleBTRType === "t80") {
+			triggerBattleT80Cannon();
+		  }
 	  } else {
-		const missMessage = `${battleBTRType === 't80' ? 'T-80' : 'BTR-80A'}實施火力支援（未命中）`;
-		pushBattleLog(missMessage);
+		  // 未命中時也同樣隨機採用對應詞庫中的描述
+		  let type = battleBTRType === "t80" ? "T-80" : "BTR-80A";
+		  let phrase = getRandomPhrase(type);
+		  const missMessage = `${phrase}（未命中）`;
+		  pushBattleLog(missMessage);
 	  }
 	  
 	  // 上传攻击结果到Firebase
