--- a/index.html
+++ b/index.html
@@ -4846,15 +4846,19 @@ function triggerT80Cannon() {
 	  btr: [
 		"BTR-80A使用30mm高爆彈鏈[HE]，前出實施火力支援",
 		"BTR-80A使用30mm混合彈鏈[AP+HE+API]，對目標展開火力覆蓋",
-		"BTR-80A使用30mm對空彈鏈[API+HE]，對目標展開精準射擊",
-		"BTR-80A使用30mm穿甲彈鏈[AP]，對敵方掩體展開集中射擊"
+		"BTR-80A使用30mm對空彈鏈[API+HE+AP-T]，對目標展開精準射擊",
+		"BTR-80A使用30mm穿甲彈鏈[AP]，對敵方掩體展開集中射擊",
+		"BTR-80A使用30mm曳光彈鏈[AP-T+API+HE-T]，對敵方集群進行威懾射擊",
+		"BTR-80A使用30mm穿燃彈鏈[API]，對輕裝甲目標展開壓制射擊"
 	  ],
 	  t80: [
 	    "T-80使用12.7mm高射機槍[7n34]，對目標展開精確點射",
-		"T-80使用125mm高爆彈[3OF26]，對開闊地目標展開射擊",
-		"T-80使用125mm高爆彈[3OF26]，對掩體內目標展開射擊",
-		"T-80使用125mm穿甲彈[3BM42]，對混凝土建築展開射擊",
-		"T-80使用125mm破甲彈[BK-12]，對混凝土建築展開射擊"
+		"T-80使用125mm高爆彈[3OF26]，對開闊地目標實施射擊",
+		"T-80使用125mm高爆彈[3OF26]，對掩體內目標實施射擊",
+		"T-80使用125mm穿甲彈[3BM42]，對混凝土建築實施貫穿射擊",
+		"T-80採用125mm穿甲彈[3BM60]，對敵方重裝甲目標實施貫穿射擊",
+		"T-80使用125mm破甲彈[3BK18M]，對混凝土建築實施破壞射擊",
+		"T-80使用125mm破甲彈[3BK18M]，對敵方輕裝甲目標實施破壞射擊"
 	  ]
 	};
 	function getRandomPhrase(type) {
