--- a/index.html
+++ b/index.html
@@ -4678,6 +4678,18 @@ function triggerT80Cannon() {
 	
 	// 當文件內容完全加載後啟動遊戲
 	document.addEventListener("DOMContentLoaded", function() {
+		if (/iP(hone|od|ad)/.test(navigator.userAgent)) {
+		  let lastTouchEnd = 0;
+		  const DOUBLE_TAP_THRESHOLD = 300; // 毫秒
+		  
+		  document.addEventListener('touchend', function (event) {
+			const now = Date.now();
+			if (now - lastTouchEnd < DOUBLE_TAP_THRESHOLD) {
+			  event.preventDefault();
+			}
+			lastTouchEnd = now;
+		  }, { passive: false });
+		}
 		initProductionAnimation();
 		initExplorationAnimation();
 		updateProductionBackground(); // 初始化生产背景
