--- a/index.html
+++ b/index.html
@@ -5869,7 +5869,7 @@ function triggerT80Cannon() {
 	  saveGameState();
 	  
 	  // 更新UI
-	  updateResourceCounters();
+	  updateResourceDisplays();
 	}
 	
 
